--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TypeScript</title>
+	<script src="main.js"></script>
 	<style>
 		.wrapper {
 			max-width: 800px;
